Add tests and update source

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "graze/data-structure",
     "description": "Common data structures",
     "keywords": ["array", "collection", "container", "data", "filter", "map", "parameters", "reduce", "reduce", "structure"],
-    "homepage": "https://github.com/graze/data-structure",
+    "homepage": "https://github.com/graze/DataStructure",
 
     "version": "0.1.0",
 
@@ -13,7 +13,6 @@
     },
 
     "require-dev": {
-        "mockery/mockery": "~0.8.0",
         "phpunit/phpunit": "~3.7.21"
     }
 }
