--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 language: php
 
-php: [5.3, 5.4, 5.5]
+php:
+    - 5.3
+    - 5.4
+    - 5.5
+    - 5.6
+    - hhvm
 
 before_script:
-  - php -r "eval('?>'.file_get_contents('https://getcomposer.org/installer'));"
-  - php composer.phar install --dev --prefer-source
+    - composer install --dev
 
-script: make tests
+script:
+    - vendor/bin/phpunit
 
 notifications:
-  email:
-    - andrew.lawson@graze.com
+    email:
+        andrew.lawson@graze.com
