--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,14 +3,14 @@
     <!-- Test suites -->
     <testsuites>
         <testsuite name="unit">
-            <directory suffix="Test.php">./tests/unit</directory>
+            <directory suffix="Test.php">./test/unit</directory>
         </testsuite>
     </testsuites>
 
     <!-- Coverage filter -->
     <filter>
         <whitelist>
-            <directory>./lib</directory>
+            <directory>./src</directory>
         </whitelist>
     </filter>
 
