--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,12 @@
         }
     },
     "require": {
-        "php": ">=5.5",
+        "php": ">=5.5|^7.0",
         "graze/sort": "~2.0"
     },
     "require-dev": {
-        "adlawson/timezone": "~1.0",
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "^4.2 | ^5.2",
+        "squizlabs/php_codesniffer": "^3",
+        "graze/standards": "^2.0"
     }
 }
